fix(styling): better visibility on hover for nav items + search history items

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -399,8 +399,12 @@ body {
     color: var(--text-primary) !important;
 }
 
-.usa-nav__link:hover {
-    color: var(--primary-color) !important;
+.usa-nav__link:hover, .usa-nav-link:hover {
+    color: var(--primary-dark) !important;
+}
+
+.search-history-item:hover p {
+    color: var(--primary-dark) !important;
 }
 
 /* Table theme support */
